Added test index styling again

--- a/Tests/runner.css
+++ b/Tests/runner.css
@@ -62,6 +62,39 @@ body {
 	top: expression(eval(document.documentElement.scrollTop+document.documentElement.clientHeight-this.clientHeight));
 }
 
+/* INDEX PAGE */
+.container {
+	padding:3em;
+	width: auto;
+}
+
+#select {
+	text-align:right;
+}
+#select fieldset {
+	text-align:left;
+}
+#select label {
+	text-align:right;
+}
+#select div input {
+	line-height: 2em;
+}
+
+
+ul#prebuilt {
+	padding-left:0;
+	list-style:none;
+}
+ul#prebuilt li a {
+	font-size: 1.5em;
+	text-decoration: none;
+	padding: 0.5em;
+}
+ul#prebuilt li a:hover {
+	background-color: #eee;
+}
+
 /* Tests */
 
 .test-results {
